# sql-excel

./: .gitignore  DEVELOPMENT_SUMMARY.md  KEYBOARD_CONTROLS.md  MCP_SETUP.md  README.md  TEST_QUERIES.md  api_server.py  conftest.py  create_test_data.py  loader.py  main.py  mcp_config.json  mcp_rest_client.py  mcp_server.py  requirements.txt  show_schemas.py  test_ctrlc.py  utils.py
excel_loader_rs/: Cargo.toml  README.md  rust_speedup.duckdb
excel_loader_rs/src/: main.rs
test_data/: complex_data.xlsx  data_10k.xlsx  data_20k.xlsx  data_50k.xlsx  data_70k.xlsx  large_data.xlsx  orders.xlsx  users.xlsx
tests/: test_loader.py  test_utils.py
