[package]
name = "excel_loader_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
calamine = "0.24"
duckdb = { version = "0.9.2", features = ["bundled"] }
clap = { version = "4.5", features = ["derive"] }
rayon = "1.10"
anyhow = "1.0"
indicatif = "0.17" # For progress bars
chrono = "0.4"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
